--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.2"
   }
 }
