--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2"
   }
 }
